<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="@color/white"
    android:layout_gravity="center"
    android:layout_height="wrap_content">
    <LinearLayout
        android:padding="15dp"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_title"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_msg"
            android:textSize="16sp"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/rateNow"
            android:gravity="end"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_now"
            android:textSize="16sp"
            android:textColor="@color/rateDialogButtonTextColor" />
        <TextView
            android:id="@+id/noThanks"
            android:gravity="end"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_thanks"
            android:textSize="16sp"
            android:textColor="@color/rateDialogButtonTextColor" />
        <TextView
            android:id="@+id/maybeLater"
            android:gravity="end"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maybe_later"
            android:textSize="16sp"
            android:textColor="@color/rateDialogButtonTextColor" />
    </LinearLayout>
</RelativeLayout>